update content of footer

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
     </main>
     <footer class="flex-item-center">
-        <p> Grocery.com Copyrights are Researved || &copy; 2021-22</p>
+        <p> Flipkart.com Copyrights are Researved || &copy; 2021-22</p>
     </footer>
 </body>
 
